--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ pandas==2.0.3
 requests==2.31.0
 scikit-learn==1.4.1.post1
 sklearn==0.0.post10
-streamlit==1.27.1
+streamlit
 streamlit-aggrid==0.3.4.post3
 streamlit-folium==0.18.0
 tensorflow==2.14.0
