--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-folium==0.16.0
-gdown==4.7.1
-huggingface-hub==0.20.3
-matplotlib==3.7.2
-matplotlib-inline==0.1.6
-numpy==1.25.2
-opencv-python==4.9.0.80
-pandas==2.0.3
-requests==2.31.0
-scikit-learn==1.4.1.post1
-sklearn==0.0.post10
-streamlit==1.32.2
-streamlit-aggrid==0.3.4.post3
-streamlit-folium==0.18.0
-tensorflow==2.14.0
-torch==2.0.1
-ultralytics==8.1.34
-xarray==2023.10.1
+folium
+gdown
+huggingface-hub
+matplotlib
+matplotlib-inline
+numpy
+opencv-python
+pandas
+requests
+scikit-learn
+sklearn
+streamlit
+streamlit-aggrid
+streamlit-folium
+tensorflow
+torch
+ultralytics
+xarray
