--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,11 @@ opencv-python-headless
 pandas
 requests
 scikit-learn
-streamlit
+streamlit == 1.33.0
 streamlit-aggrid
 streamlit-folium
 tensorflow
 torch
-ultralytics
+ultralytics == 8.2.1
 xarray
 simplekml
